# ppg-processor

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
ppg_processor/: __init__.py  main.py
ppg_processor/assets/: __init__.py  icon-512-maskable.icns
ppg_processor/gui/: __init__.py  app.py
ppg_processor/processing/: __init__.py  batch_worker.py  directory_worker.py  file_worker.py  filters.py  hrv_metrics.py
ppg_processor/utils/: __init__.py  io_utils.py
