[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppg_processor"
version = "1.0.0"
description = "A tool for processing PPG data and calculating PPI and HRV metrics"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"

dependencies = [
    "neurokit2>=0.2.10",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyqt6>=6.8.1",
    "pyqtgraph>=0.13.7",
    "scipy>=1.15.2",
]

[project.scripts]
ppg_processor = "ppg_processor.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ppg_processor"]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
]
