[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppg_processor"
version = "1.0.3"
description = "A tool for processing PPG data and calculating PPI and HRV metrics"
readme = "README.md"
authors = [
    {name = "Yago Lizarribar Carrilll", email = "yago.lizarribar@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"

dependencies = [
    "neurokit2>=0.2.10",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyinstaller>=6.12.0",
    "pyqt6>=6.8.1",
    "pyqtgraph>=0.13.7",
    "pywavelets>=1.8.0",
    "scipy>=1.15.2",
]

[project.scripts]
ppg_processor = "ppg_processor.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ppg_processor"]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "ruff>=0.11.4",
]

[tool.ruff]        
# Exclude a variety of commonly ignored directories.
exclude = [
    "__init__.py",
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
